===============================================================================
 2 Mar 96: Released TclX 7.5a Beta 2
===============================================================================
 4 Mar 96:
  o Cleaned up the runtime initialization.  Renamed TclInit.tcl to be tclx.tcl
    and created tkx.tcl.
-------------------------------------------------------------------------------
10 Mar 96:
  o Removed socket functionallity that duplicated Tcl's. Deprecated the
    server_connect, server_create, server_accept and  server_cntl commands.
    Renamed server_info to be host_info and moved the server_cntl
    functionallity info the fcntl command.   Compatbility with these commands
    is still supported for old scripts.
  o Since sockets are now required to build base Tcl, they are no longer
    optional with TclX.
  o Added event loop support for the TclX shell.  If any event sources are
    created the shell will enter an event loop at the end of the top level
    script instead of exiting.  Suggested by Jan Nijtmans
    <nijtmans@nici.kun.nl>.
  o Changed TclX version numbering scheme to append a decimal and a number
    to the base Tcl version instead of a letter.  This makes it compatible
    with the Tcl package versioning mechanism.
-------------------------------------------------------------------------------
13 Mar 96:
  o The copyfile command now disables newline translation by default, copying
    data in binary mode.  A new option has been added to allow translation.
===============================================================================
13 Mar 96: Released TclX 7.5.0 Beta 3
===============================================================================
14 Mar 96:
  o Added support for ITcl 2.0 from earlier TclX 7.4 based patch.
  o Modified the commandloop command to support event based command input.
   (* potential incompatibility *)
-------------------------------------------------------------------------------