@@ -1124,4 +1124,8 @@
   o Added support for ITcl 2.0 from earlier TclX 7.4 based patch.
   o Modified the commandloop command to support event based command input.
    (* potential incompatibility *)
+  o Removed the implicit event loop feature of the TclX added in the previous
+    beta.  It could lead to some hard to find problems.
+  o Added mainloop procedure to implement top level evant loops in TclX that
+    are similar to wish's.
 -------------------------------------------------------------------------------
